--- a/config/xiaomi_ax3600-stock.config
+++ b/config/xiaomi_ax3600-stock.config
@@ -84,7 +84,7 @@ CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 CONFIG_PACKAGE_dnsmasq_full_nftset=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
-CONFIG_PACKAGE_etherwake=y
+# CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_f2fsck=m
 CONFIG_PACKAGE_git=y
 CONFIG_PACKAGE_git-http=y
